feat: 모임 정보 조회에 일정, 수상내역 추가